2003-07-17  Jesus Calvino-Fraga <jesusc@ece.ubc.ca>

    * link/z80/lklibr.c: fixed bug when there is a '.' in a library path.

2003-07-17  Bernhard Held <bernhard@bernhardheld.de>

        * device/lib/Makefile.in: bad fix, reverted to 1.43
	
2003-07-16  Bernhard Held <bernhard@bernhardheld.de>

	* device/lib/Makefile.in: added missing z80 object files

2003-07-14  Bernhard Held <bernhard@bernhardheld.de>

        * src/SDCCcse.c (algebraicOpts): CSE fun with &|^ and 0x00/0xff literals
	pic16 progress by Vangelis:
	* src/SDCCglobl.h:
	* src/SDCCmain.c:
	* src/pic/Makefile:
	* src/pic:
	* pic/Makefile:
	* pic16/device.c:
	* pic16/device.h:
	* pic16/gen.c:
	* pic16/gen.h:
	* pic16/genarith.c:
	* pic16/glue.c:
	* pic16/main.c:
	* pic16/pcode.c:
	* pic16/pcode.h:
	* pic16/pcodepeep.c:
	* pic16/peeph.def:

2003-07-13  Jesus Calvino-Fraga <jesusc@ece.ubc.ca>

    * src/SDCCmain.c, src/SDCCglobl.h: added option --no-std-crt0

2003-07-12  Jesus Calvino-Fraga <jesusc@ece.ubc.ca>

    * sdcc.dsw, all.dsp, link/z80/linkgbz80.dsp, as/z80/as-gbz80.dsp:
    added gbz80 build to MSVC project.
    * src/SDCCmain.c, src/SDCCglue.c, src/z80/main.c, src/z80/z80.dsp,
    link/z80/aslink.h, linkz80.dsp: cleaned up z80 and gbz80 asm files
    from 8051 stuff and setup so it links using a .lnk file.

2003-07-06  Jesus Calvino-Fraga <jesusc@ece.ubc.ca>

    * support/librarian/sdcclib.c: sdcc librarian.
    * as/mcs51/aslink.h, as/mcs51/lklib.c: Support for libraries created
    with sdcclib.

2003-07-03  Jesus Calvino-Fraga <jesusc@ece.ubc.ca>

    * as/mcs51/lkmain.c: properly handle extensions in function afile.

2003-07-02  Borut Razem <borut.razem@siol.net>

	* src/port.h, src/SDCCmain.c, src/pic/glue.h, src/pic/main.c,
	src/pic16/glue.h, sdcc/src/pic16/main.c, src/izt/i186.c,
	src/izt/tlcs900h.c, src/avr/main.c, src/ds390/main.c, src/mcs51/main.c,
	src/xa51/main.c, src/z80/main.c:
	virtualization of glue() function: each port has it's own glue function,